# fsc_aggressive_ibvs

./: LICENSE  README.md
aprilfake/: CMakeLists.txt  nodelet_plugins.xml  package.xml
aprilfake/include/aprilfake/: aprilfake_nodelet.h  common.h
aprilfake/launch/: run_aprilfake.launch
aprilfake/parameters/: aprilfake_params.yaml
aprilfake/src/: aprilfake_node_main.cpp  aprilfake_nodelet.cpp
autopilot_monitor/: CMakeLists.txt  package.xml
autopilot_monitor/cfg/: BasicTune.cfg  Px4RemoteTune.cfg
autopilot_monitor/include/autopilot_monitor/: autopilot_monitor.h  common.h
autopilot_monitor/launch/: run_autopilot_monitor.launch  run_rotors_monitor.launch
autopilot_monitor/parameters/: monitor_params.yaml
autopilot_monitor/src/: autopilot_monitor.cpp  autopilot_monitor_node.cpp
flight_system/: CMakeLists.txt  package.xml
flight_system/include/flight_system/: filght_system.h  flightgoggles_system.h  pixhawk_system.h  rotors_system.h
flight_system/parameters/: rotors_params.yaml
flight_system/src/: flight_system.cpp  flightgoggles_system.cpp  pixhawk_system.cpp  rotors_system.cpp
fsc_autopilot/: CMakeLists.txt  package.xml
fsc_autopilot/include/fsc_autopilot/: distparam_trajectory.h  fsc_autopilot.h  fsc_autopilot_inl.h  fsc_common.h  rc_monitor.h
fsc_autopilot/include/mpc/: mpc_controller.h  mpc_params.h  mpc_wrapper.h
fsc_autopilot/launch/: run_autopilot.launch  run_autopilot_px4.launch  run_autopilot_rotors.launch  run_autopilot_rotors_landing.launch  run_autopilot_rotors_mapping.launch  run_autopilot_rotors_planning.launch  run_autopilot_rotors_test.launch  run_autopilot_rotors_tracking.launch  run_controller.launch  run_landing_controller.launch  run_planner.launch  run_tracking_controller.launch  test.xml
fsc_autopilot/model/mpc/our/: acado_common.h  acado_integrator.c  acado_qpoases_interface.hpp  acado_solver.c
fsc_autopilot/model/mpc/virtual/: acado_common.h  acado_integrator.c  acado_solver.c
fsc_autopilot/model/pose_track_mpc/: acado_solver.c
fsc_autopilot/model/pose_track_mpc_vir/: acado_qpoases_interface.cpp  acado_solver.c
fsc_autopilot/parameters/: px4_control_params.yaml  px4_tracker_params.yaml  rotors_control_params.yaml  rotors_landing_control_params.yaml  rotors_landing_tracker_params.yaml  rotors_tracker_params.yaml  rotors_tracking_control_params.yaml
fsc_autopilot/rviz/: flightgoggles_autopilot.rviz  px4_autopilot.rviz  rotors_autopilot.rviz  rviz_rotors.rviz
fsc_autopilot/src/: distparam_trajectory.cpp
fsc_autopilot/src/mpc/: mpc_controller.cpp  mpc_wrapper.cpp
fsc_autopilot/src/node/: flight_mode_publisher_node.cpp  fsc_flightgoggles_node.cpp  fsc_pixhawk_node.cpp  fsc_rotors_node.cpp  goal_broadcast_node.cpp
fsc_racing_trajectory/circle_planner/: CMakeLists.txt  package.xml
fsc_racing_trajectory/circle_planner/include/circle_planner/: circle_planner.h
fsc_racing_trajectory/circle_planner/launch/: run_circle_planner.launch
fsc_racing_trajectory/circle_planner/parameters/: planner_params.yaml
fsc_racing_trajectory/circle_planner/src/: circle_planner.cpp  circle_planner_node.cpp
fsc_racing_trajectory/trajectory_planning/polynomial_trajectories/: package.xml
fsc_racing_trajectory/trajectory_planning/trajectory_generation_helper/: CMakeLists.txt  package.xml
fsc_racing_trajectory/trajectory_planning/trajectory_generation_helper/include/trajectory_generation_helper/: circle_trajectory_helper.h  heading_trajectory_helper.h  polynomial_trajectory_helper.h
fsc_racing_trajectory/trajectory_planning/trajectory_generation_helper/src/: circle_trajectory_helper.cpp  heading_trajectory_helper.cpp  polynomial_trajectory_helper.cpp
fsc_rotors_interface/: CMakeLists.txt  package.xml
fsc_rotors_interface/launch/: quadrotor_apriltag_world.launch  quadrotor_box_world.launch  quadrotor_empty_world.launch  run_rotors.launch
fsc_rotors_interface/parameters/: fsc_rotors_interface.yaml
fsc_rotors_interface/src/: fsc_rotors_interface.cpp
fsc_rotors_interface/vehicles/: hummingbird_downlooking_color_camera.gazebo  hummingbird_frontlooking_color_camera.gazebo
fsc_vision_common/state_predictor/: package.xml
fsc_vision_common/vision_common/: CMakeLists.txt  package.xml
fsc_vision_common/vision_common/include/vision_common/: control_command.h  conversion_common.h  cubic_spline.h  cubic_spline3d.h  distparam_trajectory.h  gate_feature.h  gate_feature_array.h  local_reference.h  math_common.h  normal_vector.h  parameter_helper.h  polynomial_curve.h  polynomial_trajectory.h  racing_trajectory.h  state_estimate.h  trajectory.h  trajectory_point.h  trajectory_segment.h  visual_feature.h  visual_features.h
fsc_vision_common/vision_common/src/: control_command.cpp  cubic_spline.cpp  cubic_spline3d.cpp  distparam_trajectory.cpp  gate_feature.cpp  gate_feature_array.cpp  local_reference.cpp  math_common.cpp  normal_vector.cpp  parameter_helper.cpp  polynomial_curve.cpp  polynomial_trajectory.cpp  racing_trajectory.cpp  state_estimate.cpp  trajectory.cpp  trajectory_point.cpp  trajectory_segment.cpp  visual_feature.cpp  visual_features.cpp
fsc_vision_common/vision_common/test/: test_vision_common.cpp
fsc_vision_common/vision_msgs/: CMakeLists.txt  package.xml
fsc_vision_common/vision_msgs/msg/: AutopilotConfig.msg  AutopilotFeedback.msg  AutopilotSettings.msg  ControlCommand.msg  FlightMode.msg  GateFeature.msg  GateFeatureArray.msg  LocalReference.msg  PolynomialCurve.msg  PolynomialTrajectory.msg  RacingTrajectory.msg  RcFeedback.msg  StateEstimate.msg  TrackingFeedback.msg  Trajectory.msg  TrajectoryPoint.msg  TrajectoryRacing.msg  TrajectorySegment.msg  TuneData12.msg  TuneData24.msg  TuneData48.msg  VisualFeature.msg  VisualFeatures.msg
odom_vis/odom_visualization/: CMakeLists.txt  package.xml
param_tuner/: CMakeLists.txt  package.xml
param_tuner/cfg/: ParamTuner.cfg
param_tuner/include/param_tuner/: param_tuner.h
param_tuner/launch/: run_param_tuner.launch
param_tuner/src/: param_tuner.cpp  param_tuner_node.cpp
sh_utils/: trig_target.sh
utils/: mav_fpv_sensor.gazebo  pose_track_mpc.cpp
(+15 files in other folders)
