<?xml version="1.0"?>
<package format="2">
  <name>flight_system</name>
  <version>0.0.0</version>
  <description>The flight_system package</description>

  <maintainer email="chao@todo.todo">chao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>mav_msgs</depend> -->
  <depend>vision_common</depend>
  <depend>mavros</depend>
  <depend>mavros_extras</depend>
  <depend>mavros_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
