<?xml version="1.0"?>
<package format="2">
  <name>fsc_autopilot</name>
  <version>0.0.0</version>
  <description>The fsc_autopilot package</description>

  <maintainer email="chao@todo.todo">chao</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_common</depend>
  <depend>vision_msgs</depend>
  <depend>trajectory_generation_helper</depend>
  <depend>flight_system</depend>
  <depend>state_predictor</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
